[project]
name = "fuzzray"
version = "0.1.0"
description = "Post-processor for AFL++ crashes: dedup, classify, prioritize, HTML report"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "yaka1210" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.9",
    "structlog>=24.4",
    "jinja2>=3.1",
]

[project.scripts]
fuzzray = "fuzzray.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.112",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzray"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
